--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   image_picker: ^1.0.4   # ← أضف هذا السطر
+  line_awesome_flutter: ^2.0.0  # 👈 أضف هذا السطر
 
 dev_dependencies:
   flutter_test:
